# kinopoisk

./: .gitignore  __main__.py  database.py  dump.rdb  main.py  pyproject.toml  settings.py
kinopoisk/: enums.py  exceptions.py  pyproject.toml
kinopoisk/api/: router.py
kinopoisk/api/endpoints/: films.py  smoke.py
kinopoisk/clients/: redis.py
kinopoisk/decorators/: cache.py  cache_film.py
kinopoisk/models/: film.py
kinopoisk/services/: cache.py  films_caching.py  films_crud.py
kinopoisk/tests/: test_smoke.py
tests/: test_kinopoisk.py
