[tool.poetry]
name = "kinopoisk"
version = "0.1.0"
description = ""
authors = ["amir.idiyatullin <amir.idiyatullin@pandadoc.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
